[gd_scene load_steps=7 format=3 uid="uid://dsn2c2cw1wi6s"]

[ext_resource type="Script" path="res://game/Creature/creatures/Piki/Piki.gd" id="1_74ifi"]
[ext_resource type="Script" path="res://game/Creature/creatures/Piki/PikiBody.gd" id="2_yhlsj"]
[ext_resource type="Script" path="res://game/Creature/creatures/Piki/PikiBodyRender.gd" id="3_dp6nn"]

[sub_resource type="CircleShape2D" id="CircleShape2D_l0800"]
radius = 2.5

[sub_resource type="CircleShape2D" id="CircleShape2D_exwq5"]
radius = 1.5

[sub_resource type="CircleShape2D" id="CircleShape2D_1u2ug"]
radius = 1.0

[node name="Piki" type="Node"]
script = ExtResource("1_74ifi")

[node name="Body" type="RigidBody2D" parent="."]
script = ExtResource("2_yhlsj")

[node name="CollisionHead" type="CollisionShape2D" parent="Body"]
shape = SubResource("CircleShape2D_l0800")

[node name="CollisionBody" type="CollisionShape2D" parent="Body"]
position = Vector2(-4, 0)
shape = SubResource("CircleShape2D_exwq5")

[node name="CollisionTail" type="CollisionShape2D" parent="Body"]
position = Vector2(-6.5, 0)
shape = SubResource("CircleShape2D_1u2ug")

[node name="Render" type="Node2D" parent="Body"]
script = ExtResource("3_dp6nn")
